--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
+    implementation 'com.google.firebase:firebase-inappmessaging-display-ktx:20.3.2'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -59,5 +61,6 @@ dependencies {
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.codekidX:storage-chooser:2.0.4.4'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.smartdevelopers-ir:SmartFilePicker:1.5.1'
 }
