--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,26 +2,46 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="BSPI CST"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/logo"
+        android:label="BSPI"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.BangladeshSwedenPolytechnic"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".forgetPassword"
+            android:name=".uploadFolder"
             android:exported="false" />
+        <activity
+            android:name=".FolderList"
+            android:exported="false" />
+        <activity
+            android:name=".SendMessage"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".SessionList"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".forgetPassword"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".FullViewImage"
             android:exported="false"
@@ -87,20 +107,17 @@
         <activity
             android:name=".Nav"
             android:exported="false"
-            android:theme="@style/Theme.BangladeshSwedenPolytechnic.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.BangladeshSwedenPolytechnic.NoActionBar" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.BangladeshSwedenPolytechnic.NoActionBar"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Theme.BangladeshSwedenPolytechnic.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
         <service
             android:name=".MyFirebaseInstanceIDService"
